// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements JSONSchema should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft4Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft4Element))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft4Element)))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft4Element))))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft4Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft4Element))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft4Element))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (NumberElement)
      (StringElement)
      (NullElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft4Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft4Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft4Element)))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft4Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft4Element))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement)))
  (MemberElement
    (StringElement)
    (MediaElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements JSONSchema with alternate field values should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft4Element
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft4Element))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ArrayElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement))))
`;

exports[`refractor elements given fields of type JSONReference should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft4Element
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements given generic ApiDOM element should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft4Element
  (MemberElement
    (StringElement)
    (ObjectElement)))
`;
